--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "app for building epic stories",
   "main": "server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "author": "James A. Curtis <jaaroncurtis@gmail.com>",
   "dependencies": {
     "async": "^1.0.0",
     "express": "^4.0.0",
